@startuml
skinparam Shadowing false
skinparam DefaultFontName Arial
skinparam BackgroundColor white
skinparam ArrowColor #4B5563
skinparam ArrowFontSize 9
skinparam nodesep 110
skinparam ranksep 130

left to right direction
hide circle
title ERD-10 - Privacy, audit và governance
caption Mô tả yêu cầu privacy, audit trail, audit subjects và cờ tính năng ở lớp kiểm soát hệ thống.
skinparam linetype ortho
skinparam entity {
  BackgroundColor white
  BorderColor #374151
}

entity "customer_privacy_requests" as customer_privacy_requests {
  * customer_privacy_request_id
    status
    user_id
    requested_by_user_id
    result_summary_json
    reviewed_at
    processed_at
}

entity "audit_logs" as audit_logs {
  * audit_id
    actor_user_id
    request_id
    entity_id
    before_json
    after_json
    summary_json
}

entity "audit_log_subjects" as audit_log_subjects {
  * audit_subject_id
    audit_id
    subject_id
    created_at
    subject_type
    subject_role
}

entity "feature_flags" as feature_flags {
  * feature_flag_id
    branch_id
    created_at
    updated_at
    feature_key
    environment
    enabled
}

entity "users" as users {
  * user_id
    role_id
    current_tier_id
    privacy_anonymized_at
    created_at
    updated_at
    full_name
}

entity "reservations" as reservations {
  * reservation_id
    status
    deposit_status
    deposit_intent_status
    deposit_required_amount
    deposit_paid_amount
    discount_amount
}

entity "payments" as payments {
  * payment_id
    reservation_id
    branch_id
    refund_of_payment_id
    created_by
    updated_by
    status
}

entity "branches" as branches {
  * branch_id
    branch_code
    business_hours
    closure_windows
    booking_policy
    currency
    created_at
}

users |o--o{ audit_logs : actor_user_id
audit_logs ||--o{ audit_log_subjects : audit_id
branches ||--o{ payments : branch_id
users |o--o{ payments : created_by
payments |o--o{ payments : refund_of_payment_id
reservations ||--o{ payments : reservation_id
users |o--o{ payments : updated_by
@enduml





